<resources>
    <string name="app_name">Hey</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="message_minutes">Masukkan menit</string>
    <string name="auth_token">Token anda</string>
    <string-array name="items_level">
        <item>Pilih Level</item>
        <item>Guru</item>
        <item>Murid</item>
    </string-array>

    <string name="title_activity_jajal">jajal</string>
    <string name="iconPlus">+</string>
    <string name="bantuan">Bantuan</string>
    <string name="tentang">Tentang</string>
    <string name="tutorial">Tutorial</string>
    <string name="tgsNew">Buat Tugas Baru</string>
    <string name="jdulTgas">Tambahkan Judul</string>
    <string name="nmJdul">Apa yang kamu lakukan?</string>
    <string name="SetRep">Ulangi</string>
    <string name="nmKet">Deskripsi?</string>
    <string name="wktTgas">Tenggat Waktu</string>
    <string name="wkt">Tanggal Pengingat</string>
    <string name="tgl">Waktu Pengingat</string>
    <string name="tglAkhir">Waktu Akhir Pengingat</string>
    <string name="titttle">judul</string>
    <string name="alert_content">isi</string>
    <string name="title">title</string>
    <string name="ok">ok</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="on">On</string>
    <string name="off">Off</string>

</resources>
