<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTaskAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="198dp">

            <TextView
                android:id="@+id/titlepage"
                android:layout_marginTop="20dp"
                android:textSize="26sp"
                android:textColor="#FFF"
                android:text="@string/tgsNew"
                android:textAlignment="center"
                android:layout_marginBottom="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:background="#0b6940"
                android:layout_height="1dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="-105dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgitem"
            android:orientation="vertical"
            android:paddingBottom="22dp"
            android:paddingTop="22dp">

            <LinearLayout
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/addtitle"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/jdulTgas"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/titledoes"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColorHint="#B5B5B5"
                    android:textColor="@color/colorPrimaryDark"
                    android:hint="@string/nmJdul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/adddesc"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/ketTgas"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/descdoes"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColorHint="#B5B5B5"
                    android:maxLength="25"
                    android:textColor="@color/colorPrimaryDark"
                    android:hint="@string/nmKet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="12dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/adddate"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/wktTgas"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/time"
                        android:textColorHint="#B5B5B5"
                        android:hint="@string/wkt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"/>

                    <Button
                        android:id="@+id/btn_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/time"
                        android:layout_toEndOf="@+id/time"
                        android:text="Pilih waktu" />

                    <EditText
                        android:id="@+id/date"
                        android:textColorHint="#B5B5B5"
                        android:hint="@string/tgl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:layout_below="@+id/time"
                        android:layout_alignParentStart="true"/>

                    <Button
                        android:id="@+id/btn_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/date"
                        android:layout_toEndOf="@+id/date"
                        android:text="Pilih Tanggal" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Alarm Aktif"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Switch
                    android:id="@+id/active"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnSaveTask"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="Simpan"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:background="@drawable/bgitem"
            android:backgroundTint="@color/colorAccent"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="55dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="Batal"
            android:textColor="#AFAFAF"
            android:textAllCaps="false"
            android:background="@drawable/bgitem"
            android:backgroundTint="#DDDDDD"
            android:textSize="22sp"
            android:layout_width="match_parent"
            android:layout_height="55dp" />
    </LinearLayout>


</ScrollView>